@@ -27,7 +27,7 @@ while test $# -gt 0; do
       echo @EXEC_PREFIX_DIR@
       ;;
     --version)
-      echo @MAJOR_VERSION@.@MINOR_VERSION@.@MICRO_VERSION@
+      echo @PACKAGE_VERSION@
       ;;
     --cppflags)
       echo "-I@INCLUDE_DIR@/GraphicsMagick @CPPFLAGS@"
