@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: GraphicsMagick++
+Version: @PACKAGE_VERSION@
+Description: C++ API for GraphicsMagick image processing library
+Requires: GraphicsMagick
+Libs: -L${libdir} -lGraphicsMagick++
+Cflags: -I${includedir}/GraphicsMagick@
