@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: GraphicsMagick
+Version: @PACKAGE_VERSION@
+Description: GraphicsMagick image processing library
+Requires:
+Libs: -L${libdir} @LDFLAGS@ -lGraphicsMagick @MAGICK_DEP_LIBS@
+Cflags: -I${includedir}/GraphicsMagick @CPPFLAGS@
