@@ -4,6 +4,15 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2003-03-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Makefile.am : Added rules to install GraphicsMagick++.pc.
+  <LI> lib/GraphicsMagick++.pc.in : Added pkgconfig file for
+        -lGraphicsMagick++.
+
+</UL>
+<p>
 2003-02-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
