@@ -1,3 +1,9 @@
+2003-03-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Makefile.am : Added rules to install GraphicsMagick++.pc.
+	* lib/GraphicsMagick++.pc.in : Added pkgconfig file for
+	-lGraphicsMagick++.
+
 2003-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (colorSpace): Pass image->colorspace to
